# 4neverCompanyOS

./: .gitattributes  .gitignore  .prettierignore  ARCHITECTURE.md  Cargo.toml  LICENSE  LICENSES.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ruff.toml  rust-toolchain.toml  tsconfig.base.json  wrangler.toml
.claude/: launch.json
.github/workflows/: ci.yml  docs.yml  release.yml
_bmad/: config.toml
_bmad-output/implementation-artifacts/: sprint-status.md  sprint-status.yaml
_bmad-output/implementation-artifacts/stories/: 1.15-dev-persona-restart-survival.md  1.16-hermes-tui-embedded.md  1.18-e2e-scenario-test.md  1.19-attribution-surfaces.md  2.5-both-fixed-personas-restart-survival.md  4.1-start-bmad-project-entry-point.md
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-05-26.md
_bmad-output/planning-artifacts/briefs/brief-c4n-4neverCompanyOS-2026-05-25/: .decision-log.md  addendum.md  brief.md
_bmad-output/planning-artifacts/prds/prd-c4n-4neverCompanyOS-2026-05-25/: .decision-log.md  prd.md  review-rubric.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/bmm/workflows/: brownfield.yaml  greenfield-fullstack.yaml
_bmad/core/: config.yaml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/ipc/: feeder.rs  mod.rs
apps/desktop/src/lib/: BusConnection.ts  BusSubscription.ts  PtyTail.ts  busChannelFeed.test.ts  busChannelFeed.ts  busChannelStore.ts
apps/desktop/src/panels/bmb-add-agent/: BmbAddAgentPanel.tsx  PersonaAuthorForm.test.ts  PersonaAuthorForm.tsx
apps/desktop/src/panels/spawn-approval/: SpawnApprovalTray.test.ts  SpawnApprovalTray.tsx
apps/desktop/src/shell/: App.tsx
apps/desktop/src/views/: BudgetSettings.tsx  ChannelsView.tsx  GithubSettings.tsx  MemoryView.tsx  PersonasView.tsx  ProjectsView.tsx  SettingsView.tsx  SupermemorySettings.tsx  WorkflowsView.tsx
apps/docs/: bmad.md  first-run.md  getting-started.md  index.md  multi-machine.md  package.json  troubleshooting.md
apps/docs/.vitepress/: config.mts
apps/docs/install/: build.md  linux.md  macos.md  windows.md
apps/docs/personas/: add.md  custom.md  index.md
apps/wizard/: index.html  package.json  vite.config.ts
apps/wizard/assets/: vault-readme.md
apps/wizard/src/: main.tsx  state.ts  styles.css  wizard.tsx
apps/wizard/src-tauri/: Cargo.toml  tauri.conf.json
apps/wizard/src-tauri/capabilities/: default.json
apps/wizard/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/wizard/src/steps/: AnthropicStep.tsx  AntigravityStep.tsx  ClaudeCodeStep.tsx  DoneStep.tsx  SummaryStep.tsx  VaultStep.tsx  WelcomeStep.tsx
crates/bus-relay/: Cargo.toml
crates/bus-relay/src/: envelope.rs  lib.rs  relay.rs  sse.rs
crates/credential-storage/: Cargo.toml
crates/credential-storage/src/: lib.rs
crates/github-sync/: Cargo.toml
crates/github-sync/src/: lib.rs
crates/persona-drift/: Cargo.toml
crates/persona-drift/src/: lib.rs
crates/persona-supervisor/: Cargo.toml
crates/persona-supervisor/src/: control.rs  ephemeral.rs  lib.rs  main.rs  promotion.rs
crates/platform-fs/: Cargo.toml
crates/platform-fs/src/: lib.rs
crates/vault-scoping/: Cargo.toml
crates/vault-scoping/src/: lib.rs
crates/zellij-adapter/: Cargo.toml
crates/zellij-adapter/src/: lib.rs  multi_pane.rs
docs/: 4neverCompany_OS_Brief.md  4neverCompany_OS_Build_Plan.md  CEO-REVIEW-NEVAAA-119.md  CTO-review-NEVAAA-80.md  CTO-review-NEVAAA-82.md  CTO-review-NEVAAA-83.md  CTO-review-NEVAAA-84.md  CTO-review-NEVAAA-85.md  CTO-review-NEVAAA-86.md  CTO-review-NEVAAA-88.md  HANDOFF.md  architecture-alternatives-evaluation.md  bmad-hermes-schema-alignment.md  e2e-smoke-test.md  installer.md  memory-precedence.md  pinned-versions.md  progress-signal-taxonomy.md  restart-survival.md  spike-report-tauri-webview2.md  vault-layout.md
docs/testing/: bus-restart.md
scripts/: build-installer.ps1  dev.ps1  pin-upstream-versions.ps1
services/: README.md
tests/: README.md
tests/manual/: README.md
tests/manual/m2-stall-scenarios/: README.md  corpus.test.ts
tests/manual/m4-greenfield-runs/: TEST-PROTOCOL.md
tests/manual/m4-greenfield-runs/run-1-task-tracking-cli/: RESULTS.md
tests/manual/m4-greenfield-runs/run-2-recipe-sharing-app/: RESULTS.md
tests/manual/m4-greenfield-runs/run-3-slack-style-chat/: README.md  RESULTS.md
tests/manual/m4-greenfield-runs/run-3-slack-style-chat/bmad/: 01-brief.md  02-prd.md  03-architecture.md  04-solutioning.md  05-implementation.md  qa-report.md
tests/manual/m4-greenfield-runs/run-3-slack-style-chat/bmad/stories/: 01-user-registration.md  02-user-login.md  03-channel-creation.md  04-send-message.md  05-real-time-presence.md  06-message-search.md  07-file-attachments.md  08-threaded-replies.md  09-message-reactions.md  10-direct-messages.md
tests/manual/m4-greenfield-runs/run-3-slack-style-chat/client/: package.json  tsconfig.json
tests/manual/m4-greenfield-runs/run-3-slack-style-chat/client/src/: App.tsx
tests/manual/m4-greenfield-runs/run-3-slack-style-chat/client/src/context/: AuthContext.tsx  SocketContext.tsx
tests/manual/m4-greenfield-runs/run-3-slack-style-chat/client/src/services/: api.ts
tests/manual/m4-greenfield-runs/run-3-slack-style-chat/server/: package.json  tsconfig.json
tests/manual/m4-greenfield-runs/run-3-slack-style-chat/server/src/: index.ts
tests/manual/m4-greenfield-runs/run-3-slack-style-chat/server/src/db/: client.ts  schema.sql
tests/manual/m4-greenfield-runs/run-3-slack-style-chat/server/src/middleware/: auth.ts
tests/manual/m4-greenfield-runs/run-3-slack-style-chat/server/src/routes/: auth.ts  channels.ts  dms.ts  files.ts  messages.ts  presence.ts  search.ts
(+6 files in other folders)
