[package]
name = "c4n-vault-scoping"
version = "0.0.1"
edition = "2021"
description = "Per-persona vault write logger. Detects writes outside persona scope and logs to out-of-scope-writes.log (best-effort enforcement per PRD FR-29 NOTE FOR PM)."
authors = ["4neverCompany"]

[lib]
name = "c4n_vault_scoping"
crate-type = ["rlib"]

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }