[package]
name = "c4n-desktop"
version = "0.0.1"
description = "4neverCompany OS — desktop shell"
authors = ["4neverCompany"]
edition = "2021"

[lib]
name = "c4n_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Disable cargo's auto-test for the binary. The binary is a Tauri GUI app;
# `cargo test --bin` would try to launch it and there are no unit tests
# in main.rs anyway. (Mirrors apps/wizard's setup; keeps both apps consistent.)
[[bin]]
name = "c4n-desktop"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Story 1.12: project-open + Dev persona spawn pipeline.
c4n-zellij-adapter = { path = "../../../crates/zellij-adapter" }
toml = "0.8"
dirs = "5"
