[package]
name = "c4n-desktop"
version = "0.0.1"
description = "4neverCompany OS — desktop shell"
authors = ["4neverCompany"]
edition = "2021"

[lib]
name = "c4n_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Disable cargo's auto-test for the binary. The binary is a Tauri GUI app;
# `cargo test --bin` would try to launch it and there are no unit tests
# in main.rs anyway. (Mirrors apps/wizard's setup; keeps both apps consistent.)
[[bin]]
name = "c4n-desktop"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Story 1.12: project-open + Dev persona spawn pipeline.
c4n-zellij-adapter = { path = "../../../crates/zellij-adapter" }
# Story 2.3: vault reader for Obsidian context injection at persona spawn.
c4n-platform-fs = { path = "../../../crates/platform-fs" }
# Story 3.4: FR-21 backflow drift detection.
c4n-persona-drift = { path = "../../../crates/persona-drift" }
# Story 2.9: bus relay → Tauri UI bridge. The relay's broadcast hub is the
# IPC fan-out the bus_subscribe command drains into the webview.
c4n-bus-relay = { path = "../../../crates/bus-relay" }
toml = "0.8"
dirs = "5"
# Story 2.9: parse the relay envelope's RFC-3339 `ts` into the canonical
# Unix-millisecond `ts` the @c4n/core envelope schema expects.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Story 2.9: per-subscription ids for bus_subscribe / bus_unsubscribe.
uuid = { version = "1", features = ["v4"] }
# NEVAAA-39: live Paperclip SSE feeder for the bus relay. reqwest opens the
# `text/event-stream` endpoint (rustls-tls to avoid a system OpenSSL/native-tls
# dependency on Windows); tokio-util::io::StreamReader adapts reqwest's byte
# stream into the AsyncBufRead that `Relay::run` pumps; futures-util maps the
# stream's reqwest error into an io::Error. Dep choice flagged to CTO.
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = { version = "0.3", default-features = false }
