[package]
name = "c4n-wizard"
version = "0.0.1"
description = "4neverCompany OS — first-run wizard"
authors = ["4neverCompany"]
edition = "2021"

[lib]
name = "c4n_wizard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Disable cargo's auto-test for the binary. The binary is a Tauri GUI app
# (Windows tags it for UAC elevation because the name contains "wizard");
# `cargo test --bin` would try to *launch* it as a test binary and fail
# with os error 740. There are no unit tests in main.rs anyway.
[[bin]]
name = "c4n-wizard"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
c4n-credential-storage = { path = "../../../crates/credential-storage" }
toml = "0.8"
dirs = "5"
